--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -54,16 +54,19 @@ module-margin-left = 0
 ; module-margin-right = 1
 
 font-0 = "Hermit:size=9;1"
-font-1 = "FontAwesome:size=10;0"
+font-1 = "Font Awesome 5 Brands:size=9;1"
 
 ; font-2 = "siji:pixelsize=10;1"
-font-2 = "Hermit:size=9;1"
+; font-2 = "Hermit:size=9;1"
 ; font-3 = "Hermit:size=13:weight=bold;0"
-font-3 = "Hermit:weight=bold:size=9;0"
-font-4 = "FontAwesome:size=11;0"
+font-2 = "Hermit:weight=bold:size=10;1"
+font-3 = "Font Awesome 5 Free Regular:size=8;1"
+font-4 = "Font Awesome 5 Free Solid:size=9;1"
+font-5 = "Font Awesome 5 Brands Regular:size=9;1"
+font-6 = "FontAwesome:size=9;1"
 
 line-size = 2
-modules-left = powermenu i3 layout
+modules-left = powermenu i3
 modules-center = date-tail
 modules-right = todo xkeyboard pulseaudio wlan eth
 
@@ -131,6 +134,7 @@ blacklist-0 = num lock
 
 format-prefix = " "
 format-prefix-foreground = ${colors.foreground-alt}
+format-prefix-font = 3
 ; format-prefix-underline = ${colors.secondary}
 ; format-margin-right = 1
 
@@ -154,23 +158,14 @@ wrapping-scroll = false
 
 ; Where I manage my downloads
 ws-icon-0 = 10;
-; Workspace without a special purpose
 ws-icon-1 = 1;
-; Where I search for material to view, download or waste time, also where I read documentation online
 ws-icon-2 = 2;
-; Where I actually get work done
 ws-icon-3 = 3;
-; Where I watch movies and hear to music
 ws-icon-4 = 4;
-; Where I play video games and waste time
 ws-icon-5 = 5;
-; Photo editing, Video editing or anything art related
 ws-icon-6 = 6;
-; Where I manage my mails
 ws-icon-7 = 7;
-; Where I manage my tasks
 ws-icon-8 = 8;
-; Where I read books or hear audio-books
 ws-icon-9 = 9;
 
 label-mode-padding = 2
@@ -186,25 +181,43 @@ label-focused-background = ${colors.background-alt}
 label-focused-foreground = ${colors.white}
 ; label-focused-underline= ${colors.primary}
 label-focused-padding = 2
+label-focused-font = 1
 
 ; unfocused = Inactive workspace on any monitor
 label-unfocused = %icon%
 label-unfocused-padding = 2
 label-unfocused-foreground = ${colors.light-grey}
+label-unfocused-font = 1
 
 ; visible = Active workspace on unfocused monitor
 label-visible = %icon%
 label-visible-background = ${self.label-focused-background}
 ; label-visible-underline = ${self.label-focused-underline}
 label-visible-padding = ${self.label-focused-padding}
+label-visible-font = 1
 
 ; urgent = Workspace with urgency hint set
 label-urgent = %icon%
 label-urgent-background = ${colors.alert}
+label-urgent-font = 1
 label-urgent-padding = 2
+
+label-font = 1
 
 ; Separator in between workspaces
 ; label-separator = |
+
+[module/layout]
+type = custom/script
+exec = ~/scripts/layout.py 
+interval = 0.3
+; format-background = ${colors.primary}
+; format-foreground = ${colors.yellow}
+format-padding = 1
+format-margin = 0
+
+label = %output%
+; label-font = 5
 
 
 [module/todo]
@@ -216,9 +229,23 @@ format = <label>
 format-prefix = " "
 format-prefix-foreground = ${colors.foreground-alt}
 format-margin = 2
-click-left = "kill -USR1 $(pgrep --oldest --parent %pid%)"
-label-font = 3
+click-left = "kill -USR1 %pid%"
+; click-left = "kill -USR1 $(pgrep --oldest --parent %pid%)"
+label-font = 1
 tail = true
+
+
+[module/show_scratchs]
+interval = 1
+type = custom/script
+exec = "~/scripts/show_scratchpad.py"
+label = %output%
+label-font = 1
+format-foreground = ${colors.foreground-alt}
+; format-underline = ${colors.foreground-alt}
+format-margin = 1
+
+
 
 [module/wlan]
 type = internal/network
@@ -231,6 +258,7 @@ format-connected = <ramp-signal> <label-connected>
 ; format-connected-background = ${colors.foreground-alt}
 
 label-connected = "%{A:wicd-client &:}%essid% %{A}"
+lable-disconnected = "Not connected"
 
 ; label-click-left = wicd-client
 ; format-margin = 20
@@ -251,6 +279,7 @@ ramp-signal-2 = 
 ramp-signal-3 = 
 ramp-signal-4 = 
 ramp-signal-foreground = ${colors.foreground-alt}
+ramp-signal-font = 3
 
 
 [module/eth]
@@ -288,14 +317,17 @@ time = "%I:%M:%S %p"
 label =  %date% at %{T4}%time%%{T-}
 ; label-font = 4
 
+; Show the time sincronized with the real time
 [module/date-tail]
 type = custom/script
+; Change to whatever format you prefer
 exec = ~/scripts/show-date.sh "+%b %d of %Y at %I:%M:%S %p"
 interval = 30
 tail = true
 
 label =  %output%
-label-font = 4
+label-font = 3
+
 
 [module/time]
 type = internal/date
@@ -332,6 +364,7 @@ ramp-volume-4 = 
 ramp-volume-5 = 
 ramp-volume-6 = 
 ramp-volume-foreground = ${colors.foreground-alt}
+ramp-volume-font = 3
 
 
 [module/powermenu]
@@ -340,9 +373,11 @@ type = custom/menu
 expand-right = true
 
 format-spacing = 1
+label-font = 1
 
-; label-open = "  "
-label-open = "  "
+label-open = "  "
+; label-open = "  "
+label-open-font = 1
 label-open-foreground = ${colors.foreground}
 label-open-background = ${colors.blue}
 label-open-padding = 1
@@ -368,6 +403,7 @@ menu-2-1-exec = menu-open-0
 
 module-magin-left = 0
 module-magin-right = 0
+module-font = 1
 
 
 [settings]
