--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -1,8 +1,5 @@
 # Shadow
 shadow = true;
-no-dnd-shadow = true;
-no-dock-shadow = true;
-clear-shadow = true;
 shadow-radius = 7;
 shadow-offset-x = -7;
 shadow-offset-y = -7;
@@ -25,12 +22,11 @@ shadow-exclude = [
 
 
 # Opacity
-menu-opacity = 1;
 inactive-opacity = 1;
 active-opacity = 1;
 frame-opacity = 1;
 inactive-opacity-override = false;
-alpha-step = 0.06;
+# alpha-step = 0.06;
 # inactive-dim = 0.2;
 # inactive-dim-fixed = true;
 blur-background = true;
@@ -62,7 +58,10 @@ fade-in-step = 0.09;
 fade-out-step = 0.09;
 # no-fading-openclose = true;
 # no-fading-destroyed-argb = true;
-fade-exclude = ["!I3_FLOATING_WINDOW@:c"];
+fade-exclude = [
+    "!I3_FLOATING_WINDOW@:c",
+    "_NET_WM_WINDOW_TYPE@:32a * = '_NET_WM_WINDOW_TYPE_DOCK'"
+    ];
 
 # Other
 # backend = "xrender";
@@ -74,9 +73,8 @@ mark-ovredir-focused = true;
 detect-rounded-corners = true;
 detect-client-opacity = true;
 refresh-rate = 0;
-vsync = "opengl-swc";
+vsync = true;
 dbe = false;
-paint-on-overlay = true;
 # sw-opti = true;
 unredir-if-possible = true;
 # unredir-if-possible-delay = 5000;
@@ -92,7 +90,7 @@ glx-no-stencil = true;
 glx-copy-from-front = false;
 # glx-use-copysubbuffermesa = true;
 # glx-no-rebind-pixmap = true;
-glx-swap-method = "undefined";
+use-damage = true;
 # glx-use-gpushader4 = true;
 # xrender-sync = true;
 # xrender-sync-fence = true;
@@ -100,5 +98,9 @@ glx-swap-method = "undefined";
 # Window type settings
 wintypes:
 {
-  tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; };
+    dnd = { fade = false; shadow = false; opacity = 0.75; focus = true; };
+    dock = { fade = false; shadow = false; opacity = 0.75; focus = true; };
+    tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; };
+    popup_menu = { fade = true; shadow = true; opacity = 1; focus = true; };
+    dropdown_menu = { fade = true; shadow = true; opacity = 1; focus = true; };
 };
